# english-dictionary-plugin

./: Cargo.toml
src/: lib.rs
