[package]
name = "english-dictionary-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "english_dictionary_plugin"
crate-type = ["cdylib",'rlib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
abi_stable = "0.11.3"
anyhow = "1.0.80"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
urlencoding = "2.1.3"
clipboard = "0.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z" 
